--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -65,6 +65,19 @@
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
+    --radius-xl: calc(var(--radius) + 4px);
+
+        --vis-tooltip-background-color: none !important;
+    --vis-tooltip-border-color: none !important;
+    --vis-tooltip-text-color: none !important;
+    --vis-tooltip-shadow-color: none !important;
+    --vis-tooltip-backdrop-filter: none !important;
+    --vis-tooltip-padding: none !important;
+
+    --vis-primary-color: var(--primary);
+    /* change to any hsl value you want */
+    --vis-secondary-color: 160 81% 40%;
+    --vis-text-color: var(--muted-foreground);
 }
 
 /*
@@ -188,7 +201,6 @@
         @apply bg-background text-foreground;
     }
 }
-
 
 * {
     scroll-behavior: smooth;
